canary-rollout.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: canary
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: web
  name: web
  namespace: canary
spec:
  replicas: 8
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
      - image: argoproj/rollouts-demo:blue
        name: blue
        ports:
        - containerPort: 8080
  strategy:
    canary:
      steps:
      - setWeight: 5
      - pause:
          duration: 10s
      - setWeight: 10
      - pause:
          duration: 10s   
---
apiVersion: v1
kind: Service
metadata:
  name: canary-svc
  namespace: canary
spec:
  type: ClusterIP
  selector:
    app: web
  ports:
  - port: 8080
    targetPort: 8080
